src/frontend/snapshots/proto__frontend__lexer__lexer@char_literals.pr.snap
---
source: src/frontend/lexer.rs
expression: res
input_file: src/frontend/lexer_inputs/char_literals.pr
---
stringified_tokens:
  - "'this is a string' at [start_line:0 start_col:0 end_line:0 end_col:18 flat_start:0 flat_end:18]"
  - "'a' at [start_line:1 start_col:0 end_line:1 end_col:3 flat_start:19 flat_end:22]"
  - "'b' at [start_line:1 start_col:4 end_line:1 end_col:7 flat_start:23 flat_end:26]"
  - "'c' at [start_line:1 start_col:8 end_line:1 end_col:11 flat_start:27 flat_end:30]"
  - "'d' at [start_line:1 start_col:12 end_line:1 end_col:15 flat_start:31 flat_end:34]"
  - "'\\' at [start_line:1 start_col:16 end_line:1 end_col:20 flat_start:35 flat_end:39]"
  - "'\\' at [start_line:1 start_col:21 end_line:1 end_col:25 flat_start:40 flat_end:44]"
  - "'\\' at [start_line:1 start_col:26 end_line:1 end_col:30 flat_start:45 flat_end:49]"
  - "'\\' at [start_line:1 start_col:31 end_line:1 end_col:35 flat_start:50 flat_end:54]"
  - "'\\' at [start_line:1 start_col:36 end_line:1 end_col:40 flat_start:55 flat_end:59]"
  - "'\\' at [start_line:1 start_col:41 end_line:1 end_col:45 flat_start:60 flat_end:64]"
  - "'\\' at [start_line:1 start_col:46 end_line:1 end_col:50 flat_start:65 flat_end:69]"
  - "''' at [start_line:1 start_col:51 end_line:1 end_col:55 flat_start:70 flat_end:74]"
  - "'\\' at [start_line:1 start_col:56 end_line:1 end_col:60 flat_start:75 flat_end:79]"
  - "'this is a string with 'quotes'' at [start_line:2 start_col:0 end_line:2 end_col:32 flat_start:80 flat_end:112]"
  - "'this is a string with \"quotes\"' at [start_line:3 start_col:0 end_line:3 end_col:34 flat_start:113 flat_end:147]"
  - "'this is a string with \\n new line' at [start_line:4 start_col:0 end_line:4 end_col:35 flat_start:148 flat_end:183]"
  - "'this is a string with \\t tab' at [start_line:5 start_col:0 end_line:5 end_col:30 flat_start:184 flat_end:214]"
  - "'this is a string with \\b backspace' at [start_line:6 start_col:0 end_line:6 end_col:36 flat_start:215 flat_end:251]"
  - "'this is a string with \\r carriage return' at [start_line:7 start_col:0 end_line:7 end_col:42 flat_start:252 flat_end:294]"
  - "'this is a string with \\f form feed' at [start_line:8 start_col:0 end_line:8 end_col:36 flat_start:295 flat_end:331]"
  - "'this is a string with \\\\ backslash' at [start_line:9 start_col:0 end_line:9 end_col:36 flat_start:332 flat_end:368]"
  - "'this is a string with \\0 null character' at [start_line:10 start_col:0 end_line:10 end_col:41 flat_start:369 flat_end:410]"

