src/frontend/snapshots/proto__frontend__lexer__lexer@comments.pr.snap
---
source: src/frontend/lexer.rs
expression: res
input_file: src/frontend/lexer_inputs/comments.pr
---
stringified_tokens:
  - "some_other_ident at [start_line:2 start_col:0 end_line:2 end_col:16 flat_start:66 flat_end:82]"
  - "true at [start_line:2 start_col:17 end_line:2 end_col:21 flat_start:83 flat_end:87]"

