src/frontend/snapshots/proto__frontend__lexer__lexer@numbers.pr.snap
---
source: src/frontend/lexer.rs
expression: res
input_file: src/frontend/lexer_inputs/numbers.pr
---
stringified_tokens:
  - "-128 at [start_line:0 start_col:0 end_line:0 end_col:4 flat_start:0 flat_end:4]"
  - "127 at [start_line:0 start_col:5 end_line:0 end_col:8 flat_start:5 flat_end:8]"
  - "-32768 at [start_line:0 start_col:9 end_line:0 end_col:16 flat_start:9 flat_end:16]"
  - "32767 at [start_line:0 start_col:17 end_line:0 end_col:23 flat_start:17 flat_end:23]"
  - "-2147483648 at [start_line:0 start_col:24 end_line:0 end_col:38 flat_start:24 flat_end:38]"
  - "2147483647 at [start_line:0 start_col:39 end_line:0 end_col:52 flat_start:39 flat_end:52]"
  - "-9223372036854775808 at [start_line:0 start_col:53 end_line:0 end_col:79 flat_start:53 flat_end:79]"
  - "9223372036854775807 at [start_line:0 start_col:80 end_line:0 end_col:105 flat_start:80 flat_end:105]"
  - "18446744073709551615 at [start_line:0 start_col:106 end_line:0 end_col:132 flat_start:106 flat_end:132]"

