src/frontend/snapshots/proto__frontend__lexer__lexer@operators.pr.snap
---
source: src/frontend/lexer.rs
expression: res
input_file: src/frontend/lexer_inputs/operators.pr
---
stringified_tokens:
  - "+ at [start_line:0 start_col:0 end_line:0 end_col:1 flat_start:0 flat_end:1]"
  - "- at [start_line:0 start_col:2 end_line:0 end_col:3 flat_start:2 flat_end:3]"
  - "* at [start_line:0 start_col:4 end_line:0 end_col:5 flat_start:4 flat_end:5]"
  - "/ at [start_line:0 start_col:6 end_line:0 end_col:7 flat_start:6 flat_end:7]"
  - "% at [start_line:0 start_col:8 end_line:0 end_col:9 flat_start:8 flat_end:9]"
  - "not at [start_line:0 start_col:10 end_line:0 end_col:11 flat_start:10 flat_end:11]"
  - "== at [start_line:1 start_col:0 end_line:1 end_col:2 flat_start:12 flat_end:14]"
  - "!= at [start_line:1 start_col:3 end_line:1 end_col:5 flat_start:15 flat_end:17]"
  - "< at [start_line:1 start_col:6 end_line:1 end_col:7 flat_start:18 flat_end:19]"
  - "> at [start_line:1 start_col:8 end_line:1 end_col:9 flat_start:20 flat_end:21]"
  - "<= at [start_line:1 start_col:10 end_line:1 end_col:12 flat_start:22 flat_end:24]"
  - ">= at [start_line:1 start_col:13 end_line:1 end_col:15 flat_start:25 flat_end:27]"
  - "= at [start_line:2 start_col:0 end_line:2 end_col:1 flat_start:28 flat_end:29]"
  - "and at [start_line:2 start_col:2 end_line:2 end_col:5 flat_start:30 flat_end:33]"
  - "or at [start_line:2 start_col:6 end_line:2 end_col:8 flat_start:34 flat_end:36]"
  - "not at [start_line:2 start_col:9 end_line:2 end_col:12 flat_start:37 flat_end:40]"
  - "not at [start_line:2 start_col:13 end_line:2 end_col:14 flat_start:41 flat_end:42]"
  - "( at [start_line:3 start_col:0 end_line:3 end_col:1 flat_start:43 flat_end:44]"
  - ") at [start_line:3 start_col:2 end_line:3 end_col:3 flat_start:45 flat_end:46]"
  - "{ at [start_line:3 start_col:4 end_line:3 end_col:5 flat_start:47 flat_end:48]"
  - "} at [start_line:3 start_col:6 end_line:3 end_col:7 flat_start:49 flat_end:50]"
  - "[ at [start_line:3 start_col:8 end_line:3 end_col:9 flat_start:51 flat_end:52]"
  - "] at [start_line:3 start_col:10 end_line:3 end_col:11 flat_start:53 flat_end:54]"
  - "; at [start_line:3 start_col:12 end_line:3 end_col:13 flat_start:55 flat_end:56]"
  - ": at [start_line:3 start_col:14 end_line:3 end_col:15 flat_start:57 flat_end:58]"
  - ", at [start_line:3 start_col:16 end_line:3 end_col:17 flat_start:59 flat_end:60]"
  - ". at [start_line:3 start_col:18 end_line:3 end_col:19 flat_start:61 flat_end:62]"

